--- a/ix-lab3/lab3-clustering.ipynb
+++ b/ix-lab3/lab3-clustering.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -111,11 +111,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -129,12 +140,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Create a dict that maps movie IDs to set of genres from the data in movies.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "movies = sc.textFile(\"/ix/ml-20m/movies.txt\").map(json.loads).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "idToGenre = {}\n",
+    "for x in movies:\n",
+    "    idToGenre[x[\"movieId\"]] = x[\"genres\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Implement the k-medioids algorithm with the Jaccard distance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -142,9 +184,12 @@
    "source": [
     "def intersect(a, b):\n",
     "     return list(set(a) & set(b))\n",
+    "    \n",
+    "def union(a,b):\n",
+    "    return set().union(a,b)\n",
     "\n",
     "def jaccard_index(a,b):\n",
-    "    return len(a + b) / len(intersect(a,b))\n",
+    "    return len(union(a,b)) / len(intersect(a,b))\n",
     "\n",
     "def jaccard_distance(a,b):\n",
     "    return 1-jaccard_index(a,b)"
@@ -152,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +230,7 @@
     "            min_i = 0\n",
     "            jdk = 1000000000\n",
     "            for i in range(k):\n",
-    "                jdi = jaccard_distance(medioids[i], p)\n",
+    "                jdi = jaccard_distance(idToGenre[medioids[i]], idToGenre[p])\n",
     "                if(jdi < jdk):\n",
     "                    min_i = i\n",
     "                    jdk = jdi\n",
@@ -201,7 +246,7 @@
     "                best_add = 1000000000\n",
     "                \n",
     "                for y in clusters_tmp[i]:\n",
-    "                    add = add + jaccard_distance(x,y)\n",
+    "                    add = add + jaccard_distance(idToGenre[x],idToGenre[y])\n",
     "                    \n",
     "                if add < best_add:\n",
     "                    best_add = add\n",
@@ -225,28 +270,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type '_io.BufferedReader' has no len()",
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bk-root\">\n",
+       "        <a href=\"http://bokeh.pydata.org\" target=\"_blank\" class=\"bk-logo bk-logo-small bk-logo-notebook\"></a>\n",
+       "        <span id=\"6d490d1e-43d0-450c-a18a-9eb080fd5964\">Loading BokehJS ...</span>\n",
+       "    </div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "(function(global) {\n",
+       "  function now() {\n",
+       "    return new Date();\n",
+       "  }\n",
+       "\n",
+       "  var force = \"1\";\n",
+       "\n",
+       "  if (typeof (window._bokeh_onload_callbacks) === \"undefined\" || force !== \"\") {\n",
+       "    window._bokeh_onload_callbacks = [];\n",
+       "    window._bokeh_is_loading = undefined;\n",
+       "  }\n",
+       "\n",
+       "\n",
+       "  \n",
+       "  if (typeof (window._bokeh_timeout) === \"undefined\" || force !== \"\") {\n",
+       "    window._bokeh_timeout = Date.now() + 5000;\n",
+       "    window._bokeh_failed_load = false;\n",
+       "  }\n",
+       "\n",
+       "  var NB_LOAD_WARNING = {'data': {'text/html':\n",
+       "     \"<div style='background-color: #fdd'>\\n\"+\n",
+       "     \"<p>\\n\"+\n",
+       "     \"BokehJS does not appear to have successfully loaded. If loading BokehJS from CDN, this \\n\"+\n",
+       "     \"may be due to a slow or bad network connection. Possible fixes:\\n\"+\n",
+       "     \"</p>\\n\"+\n",
+       "     \"<ul>\\n\"+\n",
+       "     \"<li>re-rerun `output_notebook()` to attempt to load from CDN again, or</li>\\n\"+\n",
+       "     \"<li>use INLINE resources instead, as so:</li>\\n\"+\n",
+       "     \"</ul>\\n\"+\n",
+       "     \"<code>\\n\"+\n",
+       "     \"from bokeh.resources import INLINE\\n\"+\n",
+       "     \"output_notebook(resources=INLINE)\\n\"+\n",
+       "     \"</code>\\n\"+\n",
+       "     \"</div>\"}};\n",
+       "\n",
+       "  function display_loaded() {\n",
+       "    if (window.Bokeh !== undefined) {\n",
+       "      Bokeh.$(\"#6d490d1e-43d0-450c-a18a-9eb080fd5964\").text(\"BokehJS successfully loaded.\");\n",
+       "    } else if (Date.now() < window._bokeh_timeout) {\n",
+       "      setTimeout(display_loaded, 100)\n",
+       "    }\n",
+       "  }\n",
+       "\n",
+       "  function run_callbacks() {\n",
+       "    window._bokeh_onload_callbacks.forEach(function(callback) { callback() });\n",
+       "    delete window._bokeh_onload_callbacks\n",
+       "    console.info(\"Bokeh: all callbacks have finished\");\n",
+       "  }\n",
+       "\n",
+       "  function load_libs(js_urls, callback) {\n",
+       "    window._bokeh_onload_callbacks.push(callback);\n",
+       "    if (window._bokeh_is_loading > 0) {\n",
+       "      console.log(\"Bokeh: BokehJS is being loaded, scheduling callback at\", now());\n",
+       "      return null;\n",
+       "    }\n",
+       "    if (js_urls == null || js_urls.length === 0) {\n",
+       "      run_callbacks();\n",
+       "      return null;\n",
+       "    }\n",
+       "    console.log(\"Bokeh: BokehJS not loaded, scheduling load and callback at\", now());\n",
+       "    window._bokeh_is_loading = js_urls.length;\n",
+       "    for (var i = 0; i < js_urls.length; i++) {\n",
+       "      var url = js_urls[i];\n",
+       "      var s = document.createElement('script');\n",
+       "      s.src = url;\n",
+       "      s.async = false;\n",
+       "      s.onreadystatechange = s.onload = function() {\n",
+       "        window._bokeh_is_loading--;\n",
+       "        if (window._bokeh_is_loading === 0) {\n",
+       "          console.log(\"Bokeh: all BokehJS libraries loaded\");\n",
+       "          run_callbacks()\n",
+       "        }\n",
+       "      };\n",
+       "      s.onerror = function() {\n",
+       "        console.warn(\"failed to load library \" + url);\n",
+       "      };\n",
+       "      console.log(\"Bokeh: injecting script tag for BokehJS library: \", url);\n",
+       "      document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "    }\n",
+       "  };var element = document.getElementById(\"6d490d1e-43d0-450c-a18a-9eb080fd5964\");\n",
+       "  if (element == null) {\n",
+       "    console.log(\"Bokeh: ERROR: autoload.js configured with elementid '6d490d1e-43d0-450c-a18a-9eb080fd5964' but no matching script tag was found. \")\n",
+       "    return false;\n",
+       "  }\n",
+       "\n",
+       "  var js_urls = ['https://cdn.pydata.org/bokeh/release/bokeh-0.12.2.min.js', 'https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.2.min.js', 'https://cdn.pydata.org/bokeh/release/bokeh-compiler-0.12.2.min.js'];\n",
+       "\n",
+       "  var inline_js = [\n",
+       "    function(Bokeh) {\n",
+       "      Bokeh.set_log_level(\"info\");\n",
+       "    },\n",
+       "    \n",
+       "    function(Bokeh) {\n",
+       "      \n",
+       "      Bokeh.$(\"#6d490d1e-43d0-450c-a18a-9eb080fd5964\").text(\"BokehJS is loading...\");\n",
+       "    },\n",
+       "    function(Bokeh) {\n",
+       "      console.log(\"Bokeh: injecting CSS: https://cdn.pydata.org/bokeh/release/bokeh-0.12.2.min.css\");\n",
+       "      Bokeh.embed.inject_css(\"https://cdn.pydata.org/bokeh/release/bokeh-0.12.2.min.css\");\n",
+       "      console.log(\"Bokeh: injecting CSS: https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.2.min.css\");\n",
+       "      Bokeh.embed.inject_css(\"https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.2.min.css\");\n",
+       "    }\n",
+       "  ];\n",
+       "\n",
+       "  function run_inline_js() {\n",
+       "    \n",
+       "    if ((window.Bokeh !== undefined) || (force === \"1\")) {\n",
+       "      for (var i = 0; i < inline_js.length; i++) {\n",
+       "        inline_js[i](window.Bokeh);\n",
+       "      }if (force === \"1\") {\n",
+       "        display_loaded();\n",
+       "      }} else if (Date.now() < window._bokeh_timeout) {\n",
+       "      setTimeout(run_inline_js, 100);\n",
+       "    } else if (!window._bokeh_failed_load) {\n",
+       "      console.log(\"Bokeh: BokehJS failed to load within specified timeout.\");\n",
+       "      window._bokeh_failed_load = true;\n",
+       "    } else if (!force) {\n",
+       "      var cell = $(\"#6d490d1e-43d0-450c-a18a-9eb080fd5964\").parents('.cell').data().cell;\n",
+       "      cell.output_area.append_execute_result(NB_LOAD_WARNING)\n",
+       "    }\n",
+       "\n",
+       "  }\n",
+       "\n",
+       "  if (window._bokeh_is_loading === 0) {\n",
+       "    console.log(\"Bokeh: BokehJS loaded, going straight to plotting\");\n",
+       "    run_inline_js();\n",
+       "  } else {\n",
+       "    load_libs(js_urls, function() {\n",
+       "      console.log(\"Bokeh: BokehJS plotting callback run at\", now());\n",
+       "      run_inline_js();\n",
+       "    });\n",
+       "  }\n",
+       "}(this));"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "UnpicklingError",
+     "evalue": "the STRING opcode argument must be quoted",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-258d8dd4a386>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"most-rated.pickle\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mkmedioids\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-8-a6fb0de52fc1>\u001b[0m in \u001b[0;36mkmedioids\u001b[1;34m(points, k)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m# initialize medioids\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[0mmedioids\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoints\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[0mclusters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\kl\\Anaconda3\\lib\\random.py\u001b[0m in \u001b[0;36mchoice\u001b[1;34m(self, seq)\u001b[0m\n\u001b[0;32m    251\u001b[0m         \u001b[1;34m\"\"\"Choose a random element from a non-empty sequence.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    252\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 253\u001b[1;33m             \u001b[0mi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_randbelow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    254\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    255\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Cannot choose from an empty sequence'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type '_io.BufferedReader' has no len()"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-44b6c87d560d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Reading an object from disk.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"selected-movies.pickle\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnpicklingError\u001b[0m: the STRING opcode argument must be quoted"
      ]
     }
    ],
    "source": [
-    "f = open(\"most-rated.pickle\", \"rb\")\n",
-    "kmedioids(f, 2)"
+    "from bokeh.io import show, output_notebook\n",
+    "from bokeh.plotting import figure, ColumnDataSource\n",
+    "from bokeh.models import HoverTool, ResetTool, PanTool, WheelZoomTool, SaveTool\n",
+    "output_notebook()\n",
+    "import pickle\n",
+    "\n",
+    "# Reading an object from disk.\n",
+    "with open(\"selected-movies.pickle\", \"rb\") as f:\n",
+    "    f = pickle.load(f, encoding=\"utf-8\")\n",
+    "    \n",
+    "\n",
+    "for movie in movies:\n",
+    "    print(movie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "kmedioids(2)"
    ]
   },
   {
@@ -255,6 +475,26 @@
    "source": [
     "### Find a good way to visualize the results of the clustering. How do you intepret the two clusters?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -269,21 +509,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "name": "python3"
   }
  },
  "nbformat": 4,
